# lab

./: README.md  RESULT.md
research/: .gitignore  CMakeLists.txt  Graph.cpp  Graph.h  GraphManaged.cpp  GraphManaged.h  HOWTO.md  brandes.h  brandes_gpu.cu  brandes_gpu_managed.cu  brandes_gpu_opt.cu  brandes_gpu_readmostly.cu  brandes_omp.cpp  brandes_sequential.cpp  common.h  main.cpp
research/analysis/: analyze_all.py
research/analysis/tables/: ablation_gteps_table.tsv  ablation_speedup_vs_gpu.tsv  ablation_table.tex  bandwidth_table.tex  bandwidth_table.tsv  exec_time_table.tex  exec_time_table.tsv  gteps_table.tex  gteps_table.tsv  speedup_table_vs_OpenMP.tex  speedup_table_vs_OpenMP.tsv  speedup_table_vs_Sequential.tex  speedup_table_vs_Sequential.tsv
research/scripts/: compare_bc.py  measure_bandwidth.sh  run_ablation.sh  run_baseline.sh  run_batchsize_sweep.sh  run_profile.sh  verify_correctness.sh
research/tools/: bandwidth_benchmark.cu  download_snap_graphs.sh  gen_graph.py  snap_to_csr.py
